Fix label contrast

--- a/packages/domain-picker/src/domain-picker/style.scss
+++ b/packages/domain-picker/src/domain-picker/style.scss
@@ -307,8 +307,8 @@ $accent-blue: #117ac9;
 
 	&.is-selected {
 		.domain-picker__badge {
-			color: $accent-blue;
-			background-color: #d9e8f7;
+			color: #0f6cb3;
+			background-color: #ddebf8;
 		}
 	}
 }
